# imager

./: .gitignore  README.md
imager-backend/: .dockerignore  Cargo.toml  Dockerfile  config  config.toml  source.sql
imager-backend/src/: lib.rs  main.rs
imager-backend/src/model/: image.rs
imager-backend/src/service/: image.rs  mod.rs  route.rs
imager-backend/src/utils/: error.rs
imager-frontend/: package-lock.json  package.json  vue.config.js
imager-frontend/src/: App.vue
imager-frontend/src/components/: MainContainer.vue  MainHeader.vue
imager-frontend/src/utils/: api.js  http.js
