[package]
name = "imager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
env_logger = "0.9.1"
log = "0.4.17"
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
sqlx = { version = "0.6.2", features = ["runtime-actix-native-tls", "mysql"] }
thiserror = "1.0.37"
toml = "0.5.9"
